--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ requests==2.26.0
 apscheduler==3.8.1
 python-dotenv==0.19.2
 python-telegram-bot==20.0
-yt-dlp
-moviepy
+yt-dlp==2021.12.1
+moviepy==1.0.3
